--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 <!-- 	-------- TO-DO: ADD META TAG AND NAME HERE -------- -->
+	<meta name="author" content="Marco Cossio">
 	<title>Form Activity Solution File</title>
+	<link rel = "stylesheet" href="styles.css"> 
 <!-- 	-------- TO-DO: ADD LINK TO CSS HERE -------- -->
 </head>
 <body>
