--- a/index.html
+++ b/index.html
@@ -30,29 +30,26 @@
 
 <!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
 		<form action="https://wp.zybooks.com/form-viewer.php" method="POST">
-				<label for="fullName">Full Name<span class="required">*</span></label>
+				<label for="fullName">Full Name:<span class="required">*</span></label>
 				<input type="text" id="fullName" name="fullName" required>
 
-				<label for="phone">Phone Number</label>
-				<input type="tel" id="phone" name="phone">
-				
-				<label for="email">Email <span class="required">*</span></label>
+				<label for="email">Email: <span class="required">*</span></label>
 				<input type="email" id="email" name="email" required>
 
-
+				<label for="phone">Phone Number:</label>
+				<input type="tel" id="phone" name="phone">
 
 				<fieldset>
 					<legend>Preferred Method of Contact<span class="required">*</span></legend>
-					<label for="contactPhone">
-						<input type="radio" id="contactPhone" name="contactMethod" value="phone">Phone
-					</label>
 					<label for="contactEmail">
 						<input type="radio" id="contactEmail" name="contactMethod" value="email" required>Email
 					</label>
-					
+					<label for="contactPhone">
+						<input type="radio" id="contactPhone" name="contactMethod" value="phone">Phone
+					</label>
 				</fieldset>
 
-				<label for="state">State of Residence</label>
+				<label for="state">State of Residence:</label>
 				<select id="state" name="state">
 					<option value="">Select your State</option>
 					<option value="AL">Alabama</option>
@@ -108,7 +105,7 @@
 					<option value="WY">Wyoming</option>
 				</select>
 
-				<label for="comments">Comments</label>
+				<label for="comments">Comments:</label>
 				<textarea id="comments" name="comments"></textarea>
 
 				<input type="submit" value="Submit">
